--- a/electric-android/app/src/main/res/layout/activity_main.xml
+++ b/electric-android/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.github.electric_fields.ElectricFieldsView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/activity_main"
+<com.github.fields.electric.ElectricFieldsView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/electric_fields"
     android:layout_width="match_parent"
     android:layout_height="match_parent" />
