--- a/electric-android/app/src/main/res/menu/main.xml
+++ b/electric-android/app/src/main/res/menu/main.xml
@@ -2,6 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/menu_random"
+        android:icon="@android:drawable/ic_menu_slideshow"
+        android:showAsAction="ifRoom"
+        android:title="@string/menu_random"/>
+    <item
         android:id="@+id/menu_save_file"
         android:icon="@android:drawable/ic_menu_save"
         android:showAsAction="ifRoom"
