--- a/electric-android/app/src/main/res/menu/main.xml
+++ b/electric-android/app/src/main/res/menu/main.xml
@@ -2,6 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/menu_preview"
+        android:icon="@android:drawable/ic_menu_crop"
+        android:showAsAction="always"
+        android:title="@string/menu_preview"/>
+    <item
         android:id="@+id/menu_random"
         android:icon="@android:drawable/ic_menu_slideshow"
         android:showAsAction="ifRoom"
