--- a/electric-android/app/src/main/res/menu/main.xml
+++ b/electric-android/app/src/main/res/menu/main.xml
@@ -13,6 +13,7 @@
         android:title="@string/menu_random"/>
     <item
         android:id="@+id/menu_stop"
+        android:enabled="false"
         android:icon="@drawable/ic_menu_stop"
         android:showAsAction="always"
         android:title="@string/menu_stop"/>
