--- a/electric-android/app/src/main/res/menu/main.xml
+++ b/electric-android/app/src/main/res/menu/main.xml
@@ -4,22 +4,32 @@
     <item
         android:id="@+id/menu_fullscreen"
         android:icon="@drawable/ic_menu_fullscreen"
+        android:orderInCategory="1"
         android:showAsAction="always"
         android:title="@string/menu_fullscreen"/>
     <item
         android:id="@+id/menu_random"
         android:icon="@drawable/ic_menu_random"
+        android:orderInCategory="2"
         android:showAsAction="always"
         android:title="@string/menu_random"/>
     <item
         android:id="@+id/menu_stop"
         android:enabled="false"
         android:icon="@drawable/ic_menu_stop"
-        android:showAsAction="always"
+        android:orderInCategory="3"
+        android:showAsAction="ifRoom"
         android:title="@string/menu_stop"/>
     <item
         android:id="@+id/menu_save_file"
         android:icon="@drawable/ic_menu_save"
+        android:orderInCategory="5"
         android:showAsAction="always"
         android:title="@string/menu_save_file"/>
+    <item
+        android:id="@+id/menu_palette"
+        android:icon="@drawable/ic_menu_palette"
+        android:orderInCategory="4"
+        android:showAsAction="ifRoom"
+        android:title="@string/menu_palette"/>
 </menu>
