--- a/electric-android/app/src/main/res/values/styles.xml
+++ b/electric-android/app/src/main/res/values/styles.xml
@@ -1,3 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <style name="Widget.TextView.Label" parent="android:Widget.DeviceDefault.TextView">
+        <item name="android:textAppearance">?android:textAppearanceMedium</item>
+    </style>
+
 </resources>
