--- a/electric-android/app/src/main/res/values/styles.xml
+++ b/electric-android/app/src/main/res/values/styles.xml
@@ -5,8 +5,9 @@
         <item name="android:textAppearance">?android:textAppearanceMedium</item>
     </style>
 
-    <style name="ActionBar.Electric" parent="android:Widget.DeviceDefault.Light.ActionBar">
+    <style name="ActionBar.Electric" parent="android:Widget.DeviceDefault.Light.ActionBar.Solid.Inverse">
         <item name="android:background">@color/action_bar</item>
+        <item name="android:displayOptions">showTitle</item>
     </style>
 
 </resources>
