--- a/electric-android/app/src/main/res/values/themes.xml
+++ b/electric-android/app/src/main/res/values/themes.xml
@@ -3,9 +3,13 @@
 
     <!-- Base application theme. -->
     <style name="Theme.Electric" parent="android:Theme.DeviceDefault.Light">
+        <item name="android:colorBackground">@color/bg_window</item>
         <item name="android:windowBackground">@color/bg_window</item>
         <!-- Translucent action bar -->
-        <item name="android:actionBarStyle">@style/ActionBar.Electric</item>
+        <item name="android:actionBarStyle">@style/Widget.Electric.ActionBar</item>
+        <item name="android:actionOverflowButtonStyle">@style/Widget.Electric.ActionButton.Overflow</item>
+        <item name="android:itemBackground">@color/action_bar</item>
+        <item name="android:itemTextAppearance">?android:textAppearanceMediumInverse</item>
         <item name="android:windowActionBarOverlay">true</item>
         <!-- Translucent status bar -->
         <item name="android:windowTranslucentStatus">true</item>
