--- a/electric-android/app/src/main/res/drawable/ic_menu_random.xml
+++ b/electric-android/app/src/main/res/drawable/ic_menu_random.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_enabled="false">
-        <bitmap android:alpha="0.25" android:src="@drawable/ic_shuffle_white"/>
-    </item>
-    <item android:drawable="@drawable/ic_shuffle_white"/>
+    <item android:drawable="@drawable/ic_shuffle_white_disabled" android:state_enabled="false" />
+    <item android:drawable="@drawable/ic_shuffle_white" />
 </selector>
