--- a/electric-android/app/src/main/res/menu/main.xml
+++ b/electric-android/app/src/main/res/menu/main.xml
@@ -18,18 +18,18 @@
         android:visible="false"
         android:icon="@drawable/ic_menu_stop"
         android:orderInCategory="3"
-        android:showAsAction="ifRoom"
+        android:showAsAction="always"
         android:title="@string/menu_stop"/>
     <item
-        android:id="@+id/menu_save_file"
-        android:icon="@drawable/ic_menu_save"
+        android:id="@+id/menu_share"
+        android:icon="@drawable/ic_menu_share"
         android:orderInCategory="5"
         android:showAsAction="always"
-        android:title="@string/menu_save_file"/>
+        android:title="@string/menu_share"/>
     <item
         android:id="@+id/menu_palette"
         android:icon="@drawable/ic_menu_palette"
-        android:orderInCategory="4"
+        android:orderInCategory="90"
         android:showAsAction="ifRoom"
         android:title="@string/menu_palette"/>
 </menu>
